--- a/xueer2/xueer-second.css
+++ b/xueer2/xueer-second.css
@@ -5,7 +5,10 @@ body{
 a{ 
     text-decoration:none; 
 }
-.inline-block{
+button{
+    outline:none;
+}
+.inline{
     display: inline-block;
     vertical-align: middle;
 }
@@ -158,7 +161,7 @@ a:hover {
     font-size:14px;
     color: #333;
 }
-.button{
+.button-middle{
     position: absolute;
     top: 0;
     right: 38px;
@@ -179,7 +182,6 @@ a:hover {
     display: inline-block;
     padding-left: 10px;
     padding-right: 10px;
-    cursor: pointer;
 }
 .right{
     width: 190px;
