--- a/muxi/muxi.css
+++ b/muxi/muxi.css
@@ -60,8 +60,8 @@ body{
 .profile{
     background-color: RGBA(56, 76, 85, 1);
     border-radius: 10%;
-    max-width: 120px;
-    width: 31%;
+    width: 112px;
+    height: 204px;
     box-sizing: border-box;
     display: inline-block;
     white-space: normal;
