--- a/xueer2/xueer-second.css
+++ b/xueer2/xueer-second.css
@@ -45,6 +45,7 @@ li{
     background-color: #1DC091;
 }
 .header{
+    min-width: 1000px;
     height: 80px;
     background-color: #FFF;
     padding:0;
@@ -335,7 +336,7 @@ textarea{
 }
 /*footer*/
 .footer{
-    width: 100%;
+    min-width: 1000px;
     height: 120px;
     background-color: rgba(51,51,51,1);
     margin-top: 100px;
