--- a/task/jishi.css
+++ b/task/jishi.css
@@ -5,13 +5,11 @@
 }
 .blue{
     height: 200px;
-    width: 300px;
     background-color: royalblue;
     font-size: 32px;
 }
 .green{
     height: 200px;
-    width: 300px;
     background-color: greenyellow;
     font-size: 32px;
 }
@@ -19,7 +17,7 @@
 - 实现绿色盒子内文字的水平和垂直居中
 - 鼠标悬停在蓝色盒子区域时对应区域透明度为0.3
 - 使标题“task1”实现
-    1.从右往左滑动进入页面的效果
-    2.滑动过程中颜色由红变黑
+    1.从右往左滑动进入页面的动画效果（时长5秒）
+    2.滑动过程中标题颜色由红变黑
 */
 
